--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,10 @@ dependencies:
   http: ^1.2.0
   intl: ^0.19.0
   provider: ^6.1.1
-  #url_launcher:
+  url_launcher:
   share_plus: ^7.2.2
   #lottie: ^3.0.0
-  #shimmer: ^3.0.0
+  shimmer:
 
 
   # The following adds the Cupertino Icons font to your application.
